src/stylesheets/components/_panel.scss
//
// Panel
// --------------------------------------------------

.panel {
  flex: 1 1 0;
  background: $panel-bg;
  display: flex;
  flex-direction: column;
  position: relative;
  padding-bottom: $space-min;
  background-clip: content-box;

  &:last-child {
    padding-bottom: 0;
  }

  .panel-header {
    flex: 0 0 $panel-header-height;
    color: $panel-header-color;
    position: relative;
    z-index: 1;

    nav {
      width: 100%;
    }
  }

  .panel-body {
    flex: 1 1 auto;
    position: relative;
    height: 100%;
    display: flex; // Prevent overflow
    flex-direction: column;

    &.over {
      @extend %drop-target;
    }
  }

  &.item-panel {
    .panel-header {
      margin-bottom: $space-min;
    }
  }

  .scrollbar-style-old-school & {
    ::-webkit {
      &-scrollbar {
        &-track {
          background: $panel-bg;
        }

        &-thumb {
          border-color: $panel-bg;
        }

        &-corner {
          background: $panel-bg;
        }
      }
    }
  }
}

